nginx-test/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.olympus.mangelschots.org`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: olympus-mangelschots-org-tls
